Added Papyrus description with Papyrus gif.

--- a/style.css
+++ b/style.css
@@ -27,7 +27,7 @@ body {
     font-family: underfont;
     src: url(underfont.ttf);
 }
-h1,h2,h3,h4,h5,p {
+h1,h2,h3,h4,h5,p,ul,li {
   font-family: underfont;
   color: white
 }
