Finished formatting, and made root files look cleaner by organizing the rest into the "Media" folder.

--- a/style.css
+++ b/style.css
@@ -25,7 +25,7 @@ body {
 /*Custom Font Defined Right here*/
 @font-face {
     font-family: underfont;
-    src: url(underfont.ttf);
+    src: url('media/underfont.ttf');
 }
 h1,h2,h3,h4,h5,p,ul,li {
   font-family: underfont;
