--- a/style.css
+++ b/style.css
@@ -1,4 +1,6 @@
 body {
+  background-image: url('media/undertalebackground.jpg');
+  background-repeat: no-repeat;
   background-color: black;
 }
 .text-glow {
@@ -27,7 +29,7 @@ body {
     font-family: underfont;
     src: url('media/underfont.ttf');
 }
-h1,h2,h3,h4,h5,p,ul,li {
+h1,h2,h3,h4,h5,p,ul,li,marquee {
   font-family: underfont;
   color: white
 }
