--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-body {
+.indexbody {
   background-image: url('media/undertalebackground.jpg');
   background-repeat: no-repeat;
   background-color: black;
@@ -9,27 +9,22 @@ body {
 	font-size: 30px;
 	text-align: center;	  	
 }
-.container {
-  background-color: black;
-	height: 400px;
-	width: 400px;
-	padding: 50px;
-}
 .centerclass {
   display: block;
   margin-left: auto;
   margin-right: auto;
   width: 50%;
 }
-.white {
-  color: white;
+.mediaadvert {
+  text-allign: center;
+  border: 5px outset white;
 }
 /*Custom Font Defined Right here*/
 @font-face {
     font-family: underfont;
     src: url('media/underfont.ttf');
 }
-h1,h2,h3,h4,h5,p,ul,li,marquee {
+h1,h2,h3,h4,h5,p,ul,li {
   font-family: underfont;
   color: white
 }
