--- a/style.css
+++ b/style.css
@@ -28,7 +28,13 @@ h1,h2,h3,h4,h5,p,ul,li {
   font-family: underfont;
   color: white
 }
+h6 {
+  font-family: underfont;
+  color: gray
+}
 .yellow {
   color: yellow
 }
-
+.disclaimer {
+  color: gray
+}
